# freqai-strategies

./: .gitignore  AGENTS.md  README.md  renovate.json
.github/: copilot-instructions.md
.opencode/command/: openspec-proposal.md
.serena/: project.yml
ReforceXY/: Dockerfile  Dockerfile.reforcexy  docker-compose.yml
ReforceXY/.devcontainer/: devcontainer-lock.json  devcontainer.json  docker-compose.dev.yml  requirements-dev.txt
ReforceXY/reward_space_analysis/: README.md  pyproject.toml  reward_space_analysis.py  test_cli.py  test_reward_space_analysis.py  test_reward_space_analysis_cli.py
ReforceXY/reward_space_analysis/tests/: .docstring_template.md  README.md  TEST_COVERAGE_MAP.md  TOLERANCE_GUIDE.md  conftest.py  constants.py  test_base.py
ReforceXY/reward_space_analysis/tests/api/: test_api_helpers.py
ReforceXY/reward_space_analysis/tests/cli/: test_cli_params_and_csv.py
ReforceXY/reward_space_analysis/tests/components/: test_additives.py  test_reward_components.py  test_transforms.py
ReforceXY/reward_space_analysis/tests/helpers/: __init__.py  assertions.py  configs.py  test_internal_branches.py  test_utilities.py  warnings.py
ReforceXY/reward_space_analysis/tests/integration/: test_integration.py  test_report_formatting.py  test_reward_calculation.py
ReforceXY/reward_space_analysis/tests/pbrs/: test_pbrs.py
ReforceXY/reward_space_analysis/tests/robustness/: test_branch_coverage.py  test_robustness.py
ReforceXY/reward_space_analysis/tests/scripts/: migrate_constants.py
ReforceXY/reward_space_analysis/tests/statistics/: test_feature_analysis_failures.py  test_statistics.py
ReforceXY/reward_space_analysis/tests/transforms/: test_transforms.py
ReforceXY/user_data/: config-template.json
ReforceXY/user_data/freqaimodels/: ReforceXY.py  optuna_journal_recovery.py
ReforceXY/user_data/strategies/: RLAgentStrategy.py
ReforceXY/user_data/tests/: test_optuna_journal_recovery.py  test_reforcexy_sampler_dispatch.py  test_reforcexy_supported_modes.py
openspec/: project.md
openspec/changes/add-multi-target-regression/: design.md  proposal.md  tasks.md
openspec/changes/add-multi-target-regression/specs/quickadapter-ml/: spec.md
quickadapter/: Dockerfile  Dockerfile.quickadapter  TUNABLES_SEMANTIC_AUDIT.md  docker-compose.yml
quickadapter/.devcontainer/: devcontainer.json  docker-compose.dev.yml  requirements-dev.txt
quickadapter/user_data/: config-template.json
quickadapter/user_data/freqaimodels/: QuickAdapterRegressorV3.py
quickadapter/user_data/scripts/: take_profit_maintenance.py
quickadapter/user_data/strategies/: ExtremaWeightingTransformer.py  LabelTransformer.py  QuickAdapterV3.py  TakeProfitStageManager.py  Utils.py
