[project]
name = "reward_space_analysis"
version = "0.1.0"
description = "Reward space analysis for ReforceXY trading strategy"
authors = [
    {name = "Jerome Benoit", email = "jerome.benoit@piment-noir.org"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy==1.16.2",
    "pytest",
]

[dependency-groups]
dev = [
    "pytest>=6.0",
    "ruff",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "."
]
python_files = [
    "test_*.py"
]
python_classes = [
    "Test*"
]
python_functions = [
    "test_*"
]
markers = [
    "components: component-level reward computations",
    "transforms: transform logic within components",
    "robustness: stress and edge-case behavior",
    "api: public API surface and helpers",
    "cli: command-line interface behaviors",
    "statistics: statistical aggregation and metrics",
    "pbrs: potential-based reward shaping specifics",
    "integration: cross-module integration scenarios",
    "slow: resource-intensive or long-running tests"
]

# Logging configuration
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage configuration
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes",
    "--cov=reward_space_analysis",
    "--cov-fail-under=85"
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
